grammar.ebnf
(* glossql grammar — the simplified language, 2026-08-03.
   Machine-readable source of truth for syntax; SPEC.md carries the semantics.

   Lexical conventions (SQL host):
   - name:    [A-Za-z_][A-Za-z0-9_]*  or double-quoted "name" (never a keyword)
   - string:  single-quoted, '' escapes a quote
   - number:  decimal literal
   - dollar:  a dollar-quoted verbatim region, postgres-style — $$ ... $$, or
              $tag$ ... $tag$ when the content itself contains "$$"; nothing
              inside is escaped, the content rides byte-exact
   - json:    a dollar region whose content is a JSON object per RFC 8259
   - keywords are case-insensitive; statements end with ";"

   Every statement lexes with the stock sqlparser tokenizer on the postgres
   dialect ("<->" is one token there); the respell that made this hold is
   recorded in reports/2026-08-03-sqlparser-respell.md.

   Substrate SQL is opaque to this grammar: glossql adds statements and table
   functions to a SQL host (views, SELECT bodies, DELETE FROM glossary and
   the cache are host SQL), it does not re-specify SQL. The actor
   (agent_id | human_id) rides the connection — there is no BY-actor clause
   anywhere; the engine stamps writer and actor kind on every statement. *)

script            = { statement, ";" } ;

statement         = declaration
                  | use
                  | gloss
                  | extract
                  | probe_stmt
                  | substrate_sql ;          (* allowlisted: SELECT,
                                                DROP TABLE, DELETE FROM
                                                glossary|cache — the rest of
                                                DDL/DML is refused *)

declaration       = "DECLARE", ( source_decl
                               | recipe_decl
                               | dataset_decl
                               | relationship_decl
                               | aspect_decl
                               | function_decl
                               | witness_decl ) ;

probe_stmt        = "PROBE", name, "AS", dollar ;
                    (* PROBE source AS $$ <sql> $$ — the recipe rehearsal
                       (ruled 2026-08-04): same SQL surface, same path
                       resolution, executed at the source, landing nothing.
                       The result always carries its schema; LIMIT 0
                       rehearses the identity a DECLARE RECIPE would stamp *)

(* -- sources ------------------------------------------------------------ *)

source_decl       = "SOURCE", name, "SET", "(", pair, { ",", pair }, ")" ;
pair              = name, ":", ( name | string | number ) ;
                    (* keys today: type (relational_db|parquet|csv|json),
                       location (url/path, no credentials), via (reference to
                       engine-held secrets — secrets never appear in statements) *)

recipe_decl       = "RECIPE", name, "ON", name, "FROM", name, "AS", dollar ;
                    (* RECIPE r ON dataset FROM source AS $$ <sql> $$ — the
                       sql runs at the source: a relational source executes
                       it in its own dialect; at a file source the server
                       runs it, read_parquet/read_csv/read_json resolving
                       under the source's location, try_to_date/
                       try_to_timestamp registered. Dollar-quoted so
                       foreign-dialect text never meets the host tokenizer.
                       The recipe carries the casts (ruled 2026-08-04):
                       the result lands as table r, the typed table —
                       no derived view, no raw twin. Identity is content
                       (SQL + produced schema): unchanged re-declaration
                       is a no-op, changed is refused outright; DROP TABLE
                       removes whole and refuses on data or glosses *)

(* -- datasets ----------------------------------------------------------- *)

dataset_decl      = "DATASET", name, "SET", "(", pair, { ",", pair }, ")" ;
                    (* keys today: purpose *)

use               = "USE", name ;
                    (* unprefixed paths resolve against the USE'd dataset *)

(* -- relationships ------------------------------------------------------ *)

relationship_decl = "RELATIONSHIP", column_path, rel_op, column_path ;
rel_op            = "->"                     (* many-to-one, the FK direction *)
                  | "<->" ;                  (* one-to-one *)
column_path       = [ name, "." ], name, ".", name ;   (* [dataset.]table.column *)

(* -- subjects ----------------------------------------------------------- *)

subject           = path
                  | pair_path ;
path              = name, [ ".", name, [ ".", name ] ] ;
                    (* dataset | dataset.table | dataset.table.column;
                       views count as tables; unprefixed resolves via USE *)
pair_path         = column_path, rel_op, column_path ;
                    (* a declared relationship, addressed by its pair path *)

(* -- glossary ----------------------------------------------------------- *)

aspect_decl       = "ASPECT", name, "WITH", json, "AS", aspect_kind ;
aspect_kind       = "MEASUREMENT"            (* never glossed; value = bound
                                                function's cached JSON output *)
                  | "FACT"                   (* authored assertion; WITH schema
                                                validates the gloss body *)
                  | "QUERY" ;                (* SQL-grounded; glosses validate
                                                against the standard grounding
                                                schema; WITH schema carries the
                                                ontology entry *)

gloss             = "GLOSS", name, "ON", subject, "AS", json ;
                    (* body admission by declared kind:
                       FACT -> the aspect's WITH schema,
                       QUERY -> the standard grounding schema,
                       MEASUREMENT -> rejected.
                       supersession key: (subject, aspect, actor kind) *)

(* -- functions ---------------------------------------------------------- *)

function_decl     = "FUNCTION", name, "FOR", ( name | "GLOBAL" ),
                    "FROM", string,
                    [ "ACCEPTS", "(", name, { ",", name }, ")" ],
                    [ "RETURNS", name ] ;
                    (* the engine's analytical machinery as rhai scripts; never
                       a metric (metrics are QUERY aspects run as their SQL).
                       FROM names the script. ACCEPTS names the aspects whose
                       current values the server hands the script as context —
                       settings are context, never call arguments. RETURNS
                       mirrors ACCEPTS (ruled 2026-08-04): it names the aspect
                       the output fills, validated against that aspect's
                       schema; a MEASUREMENT aspect has one returning function,
                       a FACT aspect's returning functions are voices in its
                       slots. No RETURNS declares a detector — role by shape;
                       the attest contract is the engine's. Every function
                       implicitly receives its subject with schema and
                       neighborhood; scripts may run any SQL. Results land in
                       the cache relation *)

extract           = "SELECT", call, { ",", call }, "FROM", subject ;
call              = name, "(", ")" ;
                    (* calls are bare — settings reach scripts as context
                       (ACCEPTS), never as arguments (dropped 2026-08-04).
                       first run computes and caches; later selects read the
                       cache; re-running = deleting the cached rows (ordinary
                       SQL, like glossary removal) and selecting again —
                       REFRESH dropped 2026-08-03. Functions never write the
                       glossary. *)

(* -- witnesses ---------------------------------------------------------- *)

witness_decl      = "WITNESS", name, "ON", name,
                    [ "BY", "(", speaker, { ",", speaker }, ")" ],
                    [ "DETECTOR", name ],
                    [ "THRESHOLD", number ] ;
speaker           = "AGENT"                  (* admits agent glosses *)
                  | "HUMAN" ;                (* admits human glosses *)
                    (* declared per aspect, dataset-wide; one current value per
                       (subject, aspect) per speaker — function voices arrive
                       via RETURNS (function_decl), never through the gate.
                       BY or DETECTOR must be named (checked at admission);
                       on a MEASUREMENT aspect BY is refused. DETECTOR names
                       a function without RETURNS; THRESHOLD is the entropy
                       cutoff in 0..1 *)

(* -- reading (table functions in substrate SQL) ------------------------- *)

glossary_read     = "GLOSSARY", "(", [ glossary_args ], ")" ;
glossary_args     = subject, [ "::", name ], [ ",", all_flag ]
                  | all_flag ;
all_flag          = "all", "=>", "true" ;
                    (* no subject sweeps the USE'd dataset; "::aspect" narrows
                       to one declared aspect, as in attest_read.
                       collapsed default: one row per (subject, aspect) —
                       (subject, aspect, value, band, score, state); value is
                       the precedence pick (human > agent > function),
                       withheld when the detector's score exceeds the
                       threshold; state in unassessed | contested | current |
                       stale — every gap visible, stale served-and-marked.
                       all => true: one row per (subject, aspect, kind, witness)
                       — (subject, aspect, kind, witness, actor, body,
                       written_at); kind is the aspect's kind, the speaker is
                       actor under witness *)

attest_read       = "ATTEST", "(", [ subject, [ "::", name ] ], ")" ;
                    (* no argument sweeps the USE'd dataset; "::aspect" (the
                       host's cast spelling) narrows to one declared aspect —
                       fin.trial_balance names a table, fin::reconciliation an
                       aspect. standard attest schema:
                       (subject, aspect, witness, band, score, computed_at);
                       band: green|yellow|orange|red, score: 0..1.
                       sweeps are WHERE clauses over this relation, never a
                       special form *)
